knative-build/runtimes/javascript/tests/error/payload-agnostic-bad-run-http-method-unsupported.http
GET http://localhost:8080/ HTTP/1.1
content-type: application/json

{
  "value": {
    "name" : "Bad",
    "place" : "POST"
  }
}

###